@@ -245,6 +245,7 @@ N(OP_IncreaseStats),
 N(OP_InitialHPUpdate),
 N(OP_InitialMobHealth),
 N(OP_InspectAnswer),
+N(OP_InspectBuffs),
 N(OP_InspectMessageUpdate),
 N(OP_InspectRequest),
 N(OP_InstillDoubt),
