@@ -44,6 +44,7 @@ E(OP_GuildMemberUpdate)
 E(OP_GuildsList)
 E(OP_HPUpdate)
 E(OP_Illusion)
+E(OP_InspectBuffs)
 E(OP_InspectRequest)
 E(OP_InterruptCast)
 E(OP_ItemLinkResponse)
