@@ -34,6 +34,7 @@ E(OP_GroupUpdate)
 E(OP_GuildMemberList)
 E(OP_GuildsList)
 E(OP_Illusion)
+E(OP_InspectBuffs)
 E(OP_InspectRequest)
 E(OP_ItemLinkResponse)
 E(OP_ItemPacket)
