@@ -501,6 +501,7 @@ OP_GroupMakeLeader=0x4129
 OP_DoGroupLeadershipAbility=0x17d7
 OP_GroupLeadershipAAUpdate=0x6567
 OP_GroupMentor=0x56DB
+OP_InspectBuffs=0x01f3
 
 # LFG/LFP Opcodes
 OP_LFGCommand=0x4463
