@@ -487,6 +487,7 @@ OP_GroupLeaderChange=0x7545
 OP_GroupRoles=0x6b67
 OP_GroupMakeLeader=0x6087
 OP_GroupMentor=0x1224
+OP_InspectBuffs=0x66bf
 # LFG/LFP Opcodes
 OP_LFGCommand=0x3288				# C
 OP_LFGGetMatchesRequest=0x5613		# C
