@@ -453,6 +453,7 @@ OP_CancelInvite=0x596C			#Trevius 03/02/09
 OP_GroupFollow2=0x59D4			#Xinu 02/20/09
 OP_GroupInvite2=0x07F6			#Xinu 02/20/09
 OP_GroupMentor=0x9EF3
+OP_InspectBuffs=0x3547
 
 #LFG/LFP Opcodes
 OP_LFGCommand=0x5D81			#Trevius 01/16/09
