@@ -420,6 +420,8 @@ OP_RaidJoin=0x1f21			# ShowEQ 10/27/05
 OP_RaidInvite=0x5891			# ShowEQ 10/27/05
 OP_RaidUpdate=0x1f21			# EQEmu 06/29/05
 
+OP_InspectBuffs=0x4FB6
+
 
 OP_ZoneComplete=0x0000
 OP_ItemLinkText=0x0000
