@@ -490,6 +490,7 @@ OP_GroupLeaderChange=0x0c33			# C
 OP_GroupRoles=0x116d				# C
 OP_GroupMakeLeader=0x5851
 OP_GroupMentor=0x292f
+OP_InspectBuffs=0x105b
 
 # LFG/LFP Opcodes
 OP_LFGCommand=0x2c38				# C
